--- a/res/layout/tweet_item.xml
+++ b/res/layout/tweet_item.xml
@@ -26,7 +26,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/tvUserName"
         android:layout_toRightOf="@+id/ivProfileImageCompose"
-        android:text="@string/tweet_body_label" />
+        android:text="@string/tweet_body_label"
+        android:autoLink="all"
+     	android:linksClickable="true" />
 
     <TextView
         android:id="@+id/tvUserScreenName"
