--- a/res/layout/activity_tweet_detail.xml
+++ b/res/layout/activity_tweet_detail.xml
@@ -2,7 +2,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}" >
+    tools:context="${packageName}.${activityClass}"
+    android:background="#ffffff"
+    android:padding="10dp" >
 
     <ImageView
         android:id="@+id/ivProfileImageDetail"
@@ -18,7 +20,11 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/ivProfileImageDetail"
-        android:text="TextView" />
+        android:text="TextView"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp" 
+        android:textSize="12sp"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/tvUserScreenNameDetail"
@@ -26,7 +32,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_toRightOf="@+id/tvUserNameDetail"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="12sp" />
 
     <TextView
         android:id="@+id/tvBodyDetail"
@@ -34,7 +41,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/ivProfileImageDetail"
-        android:text="TextView" />
+        android:text="TextView" 
+        android:textSize="14sp"
+        android:layout_marginTop="5dp"/>
 
     <TextView
         android:id="@+id/tvCreatedAt"
@@ -42,6 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="TextView" />
+        android:text="TextView"
+        android:textSize="12sp" />
 
 </RelativeLayout>
