--- a/res/layout/activity_tweet_detail.xml
+++ b/res/layout/activity_tweet_detail.xml
@@ -26,7 +26,7 @@
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentTop="true"
 	        android:layout_toRightOf="@+id/ivProfileImageDetail"
-	        android:text="TextView"
+	        android:text=""
 	        android:layout_marginLeft="5dp"
 	        android:layout_marginRight="5dp" 
 	        android:textSize="16sp"
@@ -38,7 +38,7 @@
 	        android:layout_height="wrap_content"
 	        android:layout_alignBaseline="@+id/tvUserNameDetail"
 	        android:layout_toRightOf="@+id/tvUserNameDetail"
-	        android:text="TextView"
+	        android:text=""
 	        android:textSize="14sp" />
 	
 	    <TextView
@@ -47,31 +47,49 @@
 	        android:layout_height="wrap_content"
 	        android:layout_alignParentLeft="true"
 	        android:layout_below="@+id/ivProfileImageDetail"
-	        android:text="TextView" 
+	        android:text="" 
 	        android:textSize="14sp"
 	        android:layout_marginTop="5dp"
 	        android:autoLink="all"
 	     	android:linksClickable="true" />
+	    
     </RelativeLayout>
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+	    
+        <LinearLayout
+		    android:focusable="true" 
+		    android:focusableInTouchMode="true"
+		    android:layout_width="0px" 
+		    android:layout_height="0px"/>
 	    <EditText
 	        android:id="@+id/etReplyToTweet"
 	        android:layout_width="0dip"
 	        android:layout_height="wrap_content"
 	        android:layout_weight="1"
-	        android:hint="Reply"
+	        android:hint="@string/reply"
 	        android:textSize="12sp"
-	        android:singleLine="true"/>
+	        android:singleLine="true"
+	        android:inputType="textNoSuggestions"
+	        android:nextFocusUp="@id/etReplyToTweet" 
+	        android:nextFocusLeft="@id/etReplyToTweet"
+	        android:maxLength="140"/>
+	    <TextView
+	        android:id="@+id/tvRemainingCharsCount"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/max_chars"
+	        android:textSize="12sp"
+	        android:layout_margin="2dp"/>
 	    <Button
 	        android:id="@+id/btnReplyToTweet"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
 	        android:background="#ffffff"
 	        android:textAllCaps="true"
-	        android:text="Tweet"
+	        android:text="@string/action_tweet"
 	        android:textSize="12sp"
 	        android:onClick="onReplyToTweet"/>
         
