--- a/res/layout/tweet_item.xml
+++ b/res/layout/tweet_item.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:padding="10dp"
     android:background="#ffffff" 
-    android:descendantFocusability="blocksDescendants" >
+    android:descendantFocusability="blocksDescendants">
 
     <ImageView
         android:id="@+id/ivProfileImage"
@@ -38,7 +38,7 @@
      	android:linksClickable="true" 
         android:layout_marginLeft="5dp" 
         android:textSize="12sp"
-        android:descendantFocusability="blocksDescendants"
+		android:focusable="false"
         />
 
     <TextView
