--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -6,7 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".LoginActivity" >
+    tools:context=".LoginActivity" 
+    android:background="#ffffff">
 
     <Button
         android:layout_width="match_parent"
@@ -14,6 +15,8 @@
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
         android:onClick="loginToRest"
-        android:text="@string/login_label" />
+        android:text="@string/login_label"
+        android:textColor="#54acee"
+        android:background="#ffffff" />
 
 </RelativeLayout>
