--- a/res/layout/activity_profile.xml
+++ b/res/layout/activity_profile.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}" >
+    tools:context="${packageName}.${activityClass}"
+    android:background="#ffffff" >
     
     <RelativeLayout
         android:id="@+id/rlHeader"
