--- a/res/layout/tweet_item.xml
+++ b/res/layout/tweet_item.xml
@@ -4,8 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10dp"
-    android:background="#ffffff" 
-    android:descendantFocusability="blocksDescendants">
+    android:background="#ffffff" >
 
     <ImageView
         android:id="@+id/ivProfileImage"
