--- a/res/layout/fragment_tweets_list.xml
+++ b/res/layout/fragment_tweets_list.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
-    <ListView
+    <eu.erikw.PullToRefreshListView
         android:id="@+id/lvTweets"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/> 
