--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,14 +16,21 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
         <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:actionBarTabStyle">@style/ActionBarTabStyle.Example</item>
+        <item name="android:actionBarTabTextStyle">@style/My.TabText.Style</item>
     </style>
     <style name="MyActionBar"
            parent="@android:style/Widget.Holo.Light.ActionBar">
         <item name="android:background">#54acee</item>
         <item name="android:titleTextStyle">@style/MyActionBarTitleText</item>
     </style>
-
-
     
-
+    <style name="ActionBarTabStyle.Example" parent="@android:style/Widget.Holo.Light.ActionBar.TabView">
+        <item name="android:background">@drawable/tab_indicator_ab_example</item>
+    </style>
+    
+    <style name="My.TabText.Style"
+        parent="@android:style/Widget.Holo.ActionBar.TabText">
+        <item name="android:textColor">#54acee</item>
+    </style>
 </resources>
